--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,7 @@
     <a href="/movies/new">영화</a>
     <br>
     <a href="/members/new">회원</a>
+    <a href="/members/tmp">회원보기</a>
     <br>
     <a href="/reservations/new">예약</a>
 </p>
