--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,11 +7,13 @@
 <body>
 <p>
     <a href="/movies/new">영화</a>
+    <a href="/movies/tmp">영화리스트</a>
     <br>
     <a href="/members/new">회원</a>
     <a href="/members/tmp">회원보기</a>
     <br>
     <a href="/reservations/new">예약</a>
+    <a href="/reservations/tmp">예약보기</a>
 </p>
 </body>
 </html>
