--- a/src/main/resources/templates/reservations/createReservationForm.html
+++ b/src/main/resources/templates/reservations/createReservationForm.html
@@ -5,16 +5,14 @@
 <div class="container">
     <form action="/reservations/new" method="post">
         <div class="form-group">
-            <label for="id">영화정보</label>
-            <input type="text" id="id" name="id">
+            <input type="text" id="id" name="id" value="12345679">
             <br>
-            <label for="reservation_code">자리코드</label>
-            <input type="text" id="reservation_code" name="reservation_code" placeholder="자리를 입력하세요">
+            <label for="reservation_code">자리</label>
+            <input type="text" id="reservation_code" name="reservation_code" placeholder="자리를 선택하세요">
             <br>
-            <label for="member_code">회원번호</label>
-            <input type="text" id="member_code" name="member_code">
+            <input type="text" id="member_code" name="member_code" value="12345679">
         </div>
-        <button type="submit">등록</button>
+        <button type="submit">선택</button>
     </form>
 </div> <!-- /container -->
 </body>
