--- a/src/main/resources/templates/movies/createMovieForm.html
+++ b/src/main/resources/templates/movies/createMovieForm.html
@@ -8,17 +8,17 @@
             <label for="date">Date</label>
             <input type="text" id="date" name="date" placeholder="영화 상영 날짜 ex)2020-10-01">
             <br>
-            <label for="startTime">Start Time</label>
-            <input type="text" id="startTime" name="startTime" placeholder="영화 상영 시작 시간 ex) 16:00">
+            <label for="start_time">Start Time</label>
+            <input type="text" id="start_time" name="start_time" placeholder="영화 상영 시작 시간 ex) 16:00">
             <br>
-            <label for="runningTime">RunningTime</label>
-            <input type="text" id="runningTime" name="runningTime" placeholder="영화 상영 시간 ex) 120">
+            <label for="running_time">RunningTime</label>
+            <input type="text" id="running_time" name="running_time" placeholder="영화 상영 시간 ex) 120">
             <br>
-            <label for="movieTitle">MovieTitle</label>
-            <input type="text" id="movieTitle" name="movieTitle" placeholder="영화 제목 ex) 담보">
+            <label for="movie_title">MovieTitle</label>
+            <input type="text" id="movie_title" name="movie_title" placeholder="영화 제목 ex) 담보">
             <br>
-            <label for="companyType">CompanyType</label>
-            <input type="text" id="companyType" name="companyType" placeholder="영화관 ex) CGV">
+            <label for="company_type">CompanyType</label>
+            <input type="text" id="company_type" name="company_type" placeholder="영화관 ex) CGV">
             <br>
             <label for="region">Region</label>
             <input type="text" id="region" name="region" placeholder="상영관 지역 ex) 서현">
