--- a/src/main/resources/templates/reservations/createReservationForm.html
+++ b/src/main/resources/templates/reservations/createReservationForm.html
@@ -5,7 +5,7 @@
 <div class="container">
     <form action="/reservations/new" method="post">
         <div class="form-group">
-            <input type="text" id="id" name="id" value="12345679">
+            <input type="text" id="id" name="id">
             <br>
             <label for="reservation_code">자리</label>
             <input type="text" id="reservation_code" name="reservation_code" placeholder="자리를 선택하세요">
